crates/aranya-policy-compiler/tests/data/global_let/fact_ref_invalid_expression.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid expression
  |
2 | let x = Foo
  |         ^^^ This expression is not valid in a const context
